--- a/index.html
+++ b/index.html
@@ -33,17 +33,63 @@
 </head>
 
 <body>
-  <nav>
-    <img class="logo-icon" src="" alt="">
-    <h1 class="title">
-      Information Arcade
-    </h1>
-    <h2 class="subtitle">
-      Maintained by the Reality Recycling Center
-    </h2>
-  </nav>
-  <section class="main-content">
-
+  <section class="container">
+    <nav>
+      <img class="logo-icon" src="/Images/globe.png" alt="">
+      <div class="logo-text">
+        <h1 class="title">
+          Information Arcade
+        </h1>
+        <div class="bar"></div>
+        <h2 class="subtitle">
+          Powered by the Reality Recycling Center
+        </h2>
+      </div>
+    </nav>
+    <section class="main-content">
+      <div class="project" id="steve">
+        <img class="project-icon" src="/Images/apple.png" alt="">
+        <div class="project-text">
+          <a href="" target="">
+            <h3 class="project-title">
+              Steve Says
+            </h3>
+          </a>
+          <p class="project-description">
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
+            atque corrupti quos dolores et quas molestias.
+          </p>
+        </div>
+      </div>
+      <div class="project" id="cracked">
+        <img class="project-icon" src="/Images/broken-phone.png" alt="">
+        <div class="project-text">
+          <a href="" target="">
+            <h3 class="project-title">
+              Cracked Wisdom
+            </h3>
+          </a>
+          <p class="project-description">
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
+            atque corrupti quos dolores et quas molestias.
+          </p>
+        </div>
+      </div>
+      <div class="project" id="backrub">
+        <img class="project-icon" src="/Images/hand.png" alt="">
+        <div class="project-text">
+          <a href="" target="">
+            <h3 class="project-title">
+              backrub.wiki
+            </h3>
+          </a>
+          <p class="project-description">
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
+            atque corrupti quos dolores et quas molestias.
+          </p>
+        </div>
+      </div>
+    </section>
   </section>
 </body>
 
