--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     content="RRC creates experiences, tools, and souvenirs that spark new connections across media and technology of the past, present, and future.">
   <meta property="twitter:image" content="Images/card-preview.jpg">
 
-  <link rel="icon" type="image/x-icon" href="/Images/cloud.ico">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="stylesheet" href="/style.css">
 </head>
 
