--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     content="RRC creates experiences, tools, and souvenirs that spark new connections across media and technology of the past, present, and future.">
   <meta property="twitter:image" content="Images/card-preview.jpg">
 
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <section class="container">
     <nav>
-      <img class="logo-icon" src="/Images/globe.png" alt="">
+      <img class="logo-icon" src="Images/globe.png" alt="">
       <div class="logo-text">
         <h1 class="title">
           Information Arcade
@@ -48,7 +48,7 @@
     </nav>
     <section class="main-content">
       <div class="project" id="steve">
-        <img class="project-icon" src="/Images/apple.png" alt="">
+        <img class="project-icon" src="Images/apple.png" alt="">
         <div class="project-text">
           <a href="" target="">
             <h3 class="project-title">
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="project" id="cracked">
-        <img class="project-icon" src="/Images/broken-phone.png" alt="">
+        <img class="project-icon" src="Images/broken-phone.png" alt="">
         <div class="project-text">
           <a href="" target="">
             <h3 class="project-title">
@@ -76,7 +76,7 @@
         </div>
       </div>
       <div class="project" id="backrub">
-        <img class="project-icon" src="/Images/hand.png" alt="">
+        <img class="project-icon" src="Images/hand.png" alt="">
         <div class="project-text">
           <a href="" target="">
             <h3 class="project-title">
