update text and sizing

--- a/index.html
+++ b/index.html
@@ -50,14 +50,15 @@
       <div class="project" id="steve">
         <img class="project-icon" src="Images/apple.png" alt="">
         <div class="project-text">
-          <a href="" target="">
+          <a href="https://officecowboy.github.io/steve/" target="blank">
             <h3 class="project-title">
               Steve Says
             </h3>
           </a>
           <p class="project-description">
-            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
-            atque corrupti quos dolores et quas molestias.
+            Inspired by the classic memory game Simon, follow Steve's notifications for as long as you can. Don't
+            forget
+            to claim your reward!
           </p>
         </div>
       </div>
@@ -70,22 +71,20 @@
             </h3>
           </a>
           <p class="project-description">
-            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
-            atque corrupti quos dolores et quas molestias.
+            A random image generator that really makes you wonder...
           </p>
         </div>
       </div>
       <div class="project" id="backrub">
         <img class="project-icon" src="Images/hand.png" alt="">
         <div class="project-text">
-          <a href="" target="">
+          <a href="https://backrub.wiki/" target="blank">
             <h3 class="project-title">
               backrub.wiki
             </h3>
           </a>
           <p class="project-description">
-            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
-            atque corrupti quos dolores et quas molestias.
+            A search engine that traces the history of technology from the new millenium to the present.
           </p>
         </div>
       </div>
