--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="project" id="cracked">
         <img class="project-icon" src="Images/broken-phone.png" alt="">
         <div class="project-text">
-          <a href="" target="">
+          <a href="https://github.com/officecowboy/cracked-wisdom-api" target="blank">
             <h3 class="project-title">
               Cracked Wisdom
             </h3>
