--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
   <title>Information Arcade</title>
   <meta name="title" content="Information Arcade">
   <meta name="description"
-    content="RRC creates experiences, tools, and souvenirs that spark new connections the past, present, and future.">
+    content="A collection of experiences, tools, and souvenirs from the Reality Recycling Center.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.informationarcade.games/">
+  <meta property="og:url" content="https://www.informationarcade.com/">
   <meta property="og:title" content="Information Arcade">
   <meta property="og:description"
-    content="RRC creates experiences, tools, and souvenirs that spark new connections across media and technology of the past, present, and future.">
-  <meta property="og:image" content="">
+    content="A collection of experiences, tools, and souvenirs from the Reality Recycling Center.">
+  <meta property="og:image" content="Images/IA_preview.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://www.realityrecycling.center/">
+  <meta property="twitter:url" content="https://www.informationarcade.com/">
   <meta property="twitter:title" content="Information Arcade">
   <meta property="twitter:description"
-    content="RRC creates experiences, tools, and souvenirs that spark new connections across media and technology of the past, present, and future.">
-  <meta property="twitter:image" content="Images/card-preview.jpg">
+    content="A collection of experiences, tools, and souvenirs from the Reality Recycling Center.">
+  <meta property="twitter:image" content="Images/IA_preview.jpg">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
