--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </h1>
         <div class="bar"></div>
         <h2 class="subtitle">
-          Powered by the Reality Recycling Center
+          Powered by the <a href="https://www.realityrecycling.center/" target="blank">Reality Recycling Center</a>
         </h2>
       </div>
     </nav>
