update link style

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         </h1>
         <div class="bar"></div>
         <h2 class="subtitle">
-          Powered by the <a href="https://www.realityrecycling.center/" target="blank">Reality Recycling Center</a>
+          Powered by the <a class="subtitle-link" href="https://www.realityrecycling.center/" target="blank">Reality
+            Recycling Center</a>
         </h2>
       </div>
     </nav>
