--- a/index.html
+++ b/index.html
@@ -89,6 +89,20 @@
           </p>
         </div>
       </div>
+      <div class="project" id="instakidz">
+        <img class="project-icon" src="Images/KI-logo-1.png" alt="">
+        <div class="project-text">
+          <a href="https://backrub.wiki/" target="blank">
+            <h3 class="project-title">
+              Instagram Kidz
+            </h3>
+          </a>
+          <p class="project-description">
+            A social network from a <a href="https://about.instagram.com/blog/announcements/pausing-instagram-kids"
+              target="blank">possible future</a> meets a webgame of the past.
+          </p>
+        </div>
+      </div>
     </section>
   </section>
 </body>
