update steve says bio

--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
             </h3>
           </a>
           <p class="project-description">
-            Inspired by the classic memory game Simon, follow Steve's notifications for as long as you can. Don't
-            forget
-            to claim your reward!
+            A minigame inspired by the classic memory game Simon. Follow Steve's notifications for as long as you can!
           </p>
         </div>
       </div>
