--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
       </div>
       <div class="project" id="instakidz">
-        <img class="project-icon" src="Images/KI-logo-1.png" alt="">
+        <img class="project-icon" src="Images/IGkidz.png" alt="">
         <div class="project-text">
           <a href="https://backrub.wiki/" target="blank">
             <h3 class="project-title">
