--- a/index.html
+++ b/index.html
@@ -51,11 +51,9 @@
       <div class="project" id="steve">
         <img class="project-icon" src="Images/apple.png" alt="">
         <div class="project-text">
-          <a href="https://officecowboy.github.io/steve/" target="blank">
-            <h3 class="project-title">
-              Steve Says
-            </h3>
-          </a>
+          <h3 class="project-title">
+            Steve Says <span>(coming soon!)</span>
+          </h3>
           <p class="project-description">
             A minigame inspired by the classic memory game Simon. Follow Steve's notifications for as long as you can!
           </p>
@@ -64,11 +62,9 @@
       <div class="project" id="cracked">
         <img class="project-icon" src="Images/broken-phone.png" alt="">
         <div class="project-text">
-          <a href="https://github.com/officecowboy/cracked-wisdom-api" target="blank">
-            <h3 class="project-title">
-              Cracked Wisdom
-            </h3>
-          </a>
+          <h3 class="project-title">
+            Cracked Wisdom <span>(coming soon!)</span>
+          </h3>
           <p class="project-description">
             A random image generator that really makes you wonder...
           </p>
@@ -77,11 +73,9 @@
       <div class="project" id="backrub">
         <img class="project-icon" src="Images/hand.png" alt="">
         <div class="project-text">
-          <a href="https://backrub.wiki/" target="blank">
-            <h3 class="project-title">
-              backrub.wiki
-            </h3>
-          </a>
+          <h3 class="project-title">
+            BackRub <span>(coming soon!)</span>
+          </h3>
           <p class="project-description">
             A search engine that traces the history of technology from the new millenium to the present.
           </p>
@@ -90,11 +84,9 @@
       <div class="project" id="instakidz">
         <img class="project-icon" src="Images/IGkidz.png" alt="">
         <div class="project-text">
-          <a href="https://backrub.wiki/" target="blank">
-            <h3 class="project-title">
-              Instagram Kidz
-            </h3>
-          </a>
+          <h3 class="project-title">
+            Instagram Kidz <span>(coming soon!)</span>
+          </h3>
           <p class="project-description">
             A social network from a <a href="https://about.instagram.com/blog/announcements/pausing-instagram-kids"
               target="blank">possible future</a> meets a webgame of the past.
