--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <img class="project-icon" src="Images/apple.png" alt="">
         <div class="project-text">
           <h3 class="project-title">
-            Steve Says <span>(coming soon!)</span>
+            <a href="/steve">Steve Says</a>
           </h3>
           <p class="project-description">
             A minigame inspired by the classic memory game Simon. Follow Steve's notifications for as long as you can!
