--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
           <p class="project-description">
             A minigame inspired by the classic memory game Simon. Follow Steve's notifications for as long as you can!
           </p>
+          <p class="project-author">
+            By <a href="https://www.scottdiekema.net/" target="blank">Scott Diekema</a>
+          </p>
         </div>
       </div>
       <div class="project" id="cracked">
@@ -68,6 +71,9 @@
           <p class="project-description">
             A search engine that traces the history of technology from the new millenium to the present.
           </p>
+          <p class="project-author">
+            By <a href="https://www.scottdiekema.net/" target="blank">Scott Diekema</a>, George Chen, and Michel Lizardo
+          </p>
         </div>
       </div>
       <div class="project" id="backrub">
@@ -78,6 +84,9 @@
           </h3>
           <p class="project-description">
             A random image generator that really makes you wonder...
+          </p>
+          <p class="project-author">
+            By <a href="https://www.scottdiekema.net/" target="blank">Scott Diekema</a>
           </p>
         </div>
       </div>
