add backrub link

--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
         <img class="project-icon" src="Images/hand.png" alt="">
         <div class="project-text">
           <h3 class="project-title">
-            BackRub <span>(coming soon!)</span>
+            <a href="https://backrub.wiki/">BackRub</a>
           </h3>
-          <p class="project-description">
+          <p class=" project-description">
             A search engine that traces the history of technology from the new millenium to the present.
           </p>
           <p class="project-author">
-            By <a href="https://www.scottdiekema.net/" target="blank">Scott Diekema</a>, George Chen, and Michel Lizardo
+            By <a href="https://www.scottdiekema.net/" target="blank">Scott Diekema</a>, George Chen, and Michel
+            Lizardo
           </p>
         </div>
       </div>
