remove author link

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             A minigame inspired by the classic memory game Simon. Follow Steve's notifications for as long as you can!
           </p>
           <p class="project-author">
-            By <a href="https://www.scottdiekema.net/" target="blank">Scott Diekema</a>
+            By Scott Diekema
           </p>
         </div>
       </div>
@@ -72,7 +72,7 @@
             A search engine that traces the history of technology from the new millenium to the present.
           </p>
           <p class="project-author">
-            By <a href="https://www.scottdiekema.net/" target="blank">Scott Diekema</a>, George Chen, and Michel
+            By Scott Diekema, George Chen, and Michel
             Lizardo
           </p>
         </div>
@@ -87,7 +87,7 @@
             A random image generator that really makes you wonder...
           </p>
           <p class="project-author">
-            By <a href="https://www.scottdiekema.net/" target="blank">Scott Diekema</a>
+            By Scott Diekema
           </p>
         </div>
       </div>
