last migration from steve repo

--- a/steve/index.html
+++ b/steve/index.html
@@ -39,7 +39,7 @@
   <div class="intro">
     <div class="intro-text">
       Inspired by the <a href="https://americanhistory.si.edu/collections/search/object/nmah_1302005"
-        target="blank">classic memory game Simon,</a> follow Steve's notifications for
+        target="blank">classic memory game Simon,</a><br> follow Steve's notifications for
       as
       long as you can.
     </div>
@@ -75,6 +75,10 @@
     </div>
   </div>
   <div class="sounds">
+    <audio src="Sounds/instagram.mp3" data-sound="instagram"></audio>
+    <audio src="Sounds/twitter.mp3" data-sound="twitter"></audio>
+    <audio src="Sounds/imessage.mp3" data-sound="imessage"></audio>
+    <audio src="Sounds/slack.mp3" data-sound="slack"></audio>
     <audio src="Sounds/gameover.wav" id="gameover"></audio>
     <audio src="Sounds/Cartoon-crunching-bite.mp3" id="bite"></audio>
     <audio src="Sounds/Cartoon-crunching-bite-short.mp3" id="biteshort"></audio>
