integrate steve says iframe

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
   <section class="container">
     <nav>
-      <img class="logo-icon" src="Images/globe.png" alt="">
+      <div class="logo-icon-container"><img class="logo-icon" src="../Images/globe.png" alt=""></div>
       <div class="logo-text">
         <h1 class="title">
           Information Arcade
@@ -52,7 +52,7 @@
         <img class="project-icon" src="Images/apple.png" alt="">
         <div class="project-text">
           <h3 class="project-title">
-            <a href="/steve">Steve Says</a>
+            <a href="/steve-says">Steve Says</a>
           </h3>
           <p class="project-description">
             A minigame inspired by the classic memory game Simon. Follow Steve's notifications for as long as you can!
@@ -62,7 +62,7 @@
           </p>
         </div>
       </div>
-      <div class="project" id="cracked">
+      <div class="project" id="backrub">
         <img class="project-icon" src="Images/hand.png" alt="">
         <div class="project-text">
           <h3 class="project-title">
@@ -77,7 +77,7 @@
           </p>
         </div>
       </div>
-      <div class="project" id="backrub">
+      <div class="project" id="cracked">
         <img class="project-icon" src="Images/broken-phone.png" alt="">
         <div class="project-text">
           <h3 class="project-title">
