--- a/cracked-wisdom/index.html
+++ b/cracked-wisdom/index.html
@@ -30,6 +30,7 @@
 
   <link rel="icon" type="image/x-icon" href="../favicon.ico">
   <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="cracked.css">
 </head>
 
 <body>
@@ -42,16 +43,19 @@
         </h1>
         <div class="bar"></div>
         <h2 class="subtitle">
-          Souvenirs from the World Wide Web
+          Powered by the <a class="subtitle-link" href="https://www.realityrecycling.center/" target="blank">Reality
+            Recycling Center</a>
         </h2>
       </div>
     </nav>
-    <section class="game-content">
-      <div class="corner-wrapper">
-        <iframe src="https://officecowboy.github.io/steve/" width="240" height="450" style="border:none;">
-        </iframe>
+    <section class="main-content">
+      <div class="img-container">
+        <img src="" class="pics">
+        <p class="quote"></p>
+        <p class="author"></p>
       </div>
-    </section>
+      <button type="button" id="button">Click Me!</button>
 </body>
+<script src="generator.js"></script>
 
 </html>
