--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
         </h1>
         <div class="bar"></div>
         <h2 class="subtitle">
-          Powered by the <a class="subtitle-link" href="https://www.realityrecycling.center/" target="blank">Reality
-            Recycling Center</a>
+          Souvenirs from the World Wide Web
         </h2>
       </div>
     </nav>
