add cracked wisdom!

--- a/cracked-wisdom/index.html
+++ b/cracked-wisdom/index.html
@@ -43,8 +43,7 @@
         </h1>
         <div class="bar"></div>
         <h2 class="subtitle">
-          Powered by the <a class="subtitle-link" href="https://www.realityrecycling.center/" target="blank">Reality
-            Recycling Center</a>
+          Souvenirs from the World Wide Web
         </h2>
       </div>
     </nav>
@@ -54,7 +53,14 @@
         <p class="quote"></p>
         <p class="author"></p>
       </div>
-      <button type="button" id="button">Click Me!</button>
+      <div class="controls">
+        <button type="button" id="button">NEW IMAGE</button>
+      </div>
+    </section>
+    <footer class="footer">
+      <p class="footer-text"><span class="slogan">Recycle Reality Responsibly</span>™
+        ♻ © <a href="https://www.realityrecycling.center/">RRC</a> 2022</p>
+    </footer>
 </body>
 <script src="generator.js"></script>
 
