--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <img class="project-icon" src="Images/broken-phone.png" alt="">
         <div class="project-text">
           <h3 class="project-title">
-            Cracked Wisdom <span>(coming soon!)</span>
+            <a href="/cracked-wisdom/">Cracked Wisdom</a>
           </h3>
           <p class="project-description">
             A random image generator that really makes you wonder...
@@ -81,6 +81,10 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <p class="footer-text"><span class="slogan">Recycle Reality Responsibly</span>™
+        ♻ © <a href="https://www.realityrecycling.center/">RRC</a> 2022</p>
+    </footer>
   </section>
 </body>
 
