--- a/steve-says/index.html
+++ b/steve-says/index.html
@@ -52,6 +52,11 @@
         </iframe>
       </div>
     </section>
+    <footer class="footer">
+      <p class="footer-text"><span class="slogan">Recycle Reality Responsibly</span>™
+        ♻ © <a href="https://www.realityrecycling.center/">RRC</a> 2022</p>
+    </footer>
+  </section>
 </body>
 
 </html>
