test download button

--- a/cracked-wisdom/index.html
+++ b/cracked-wisdom/index.html
@@ -58,6 +58,7 @@
       </div>
       <div class="controls">
         <button type="button" id="button">NEW IMAGE</button>
+        <button type="button" id="download-image">DOWNLOAD</button>
       </div>
     </section>
     <footer class="footer">
@@ -66,5 +67,6 @@
     </footer>
 </body>
 <script src="generator.js"></script>
+<script src="download.js"></script>
 
 </html>
