--- a/cracked-wisdom/index.html
+++ b/cracked-wisdom/index.html
@@ -58,6 +58,7 @@
       </div>
       <div class="controls">
         <button type="button" id="button">NEW IMAGE</button>
+        <button type="button" id="download-image">DOWNLOAD</button>
       </div>
     </section>
     <footer class="footer">
