update cracked wisdom meta tags

--- a/cracked-wisdom/index.html
+++ b/cracked-wisdom/index.html
@@ -8,22 +8,22 @@
 
   <!-- Primary Meta Tags -->
   <title>Cracked Wisdom</title>
-  <meta name="title" content="Information Arcade">
+  <meta name="title" content="Cracked Wisdom">
   <meta name="description" content="A random image generator that really makes you wonder...">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.informationarcade.com/">
-  <meta property="og:title" content="Information Arcade">
+  <meta property="og:title" content="Cracked Wisdom">
   <meta property="og:description" content="A random image generator that really makes you wonder...">
-  <meta property="og:image" content="../Images/IA_preview.jpg">
+  <meta property="og:image" content="../Images/cracked_preview.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://www.informationarcade.com/">
-  <meta property="twitter:title" content="Information Arcade">
+  <meta property="twitter:title" content="Cracked Wisdom">
   <meta property="twitter:description" content="A random image generator that really makes you wonder...">
-  <meta property="twitter:image" content="../Images/IA_preview.jpg">
+  <meta property="twitter:image" content="../Images/cracked_preview.png">
 
   <link rel="icon" type="image/x-icon" href="../favicon.ico">
   <link rel="stylesheet" href="../style.css">
