full trm layout

--- a/resurrection/index.html
+++ b/resurrection/index.html
@@ -75,6 +75,108 @@
           <div>(Series)</div>
         </h1>
       </div>
+      <div class="trm-grid">
+        <div class="trm-description">
+          <p>
+            The Resurrection Machine is a meditation on the act of recording and its various techniques. The original
+            installation uses a VHS camcorder to record and project the setting sun’s image onto a string of CRT
+            televisions in real-time. After tracing the descent of the sun along its winding film, the recording is
+            stopped, rewound, and replayed; the sunset resurrected as the light of the sun moves from sky to screen.
+          </p>
+        </div>
+        <div class="trm-video-embed">
+          <div class="crt film-plyr-wide">
+            <div class="crt plyr__video-embed" id="player">
+              <iframe src="https://www.youtube.com/embed/AOK-KWVUlWo" allowfullscreen allowautoplay allowtransparency
+                allow="autoplay"></iframe>
+            </div>
+          </div>
+          <div class="video-bar small">
+            <p>TRM001</p>
+            <p>HARPSWELL, ME</p>
+            <p>JUNE 28, 2019</p>
+          </div>
+        </div>
+        <div class="trm-video-embed trm-002-desktop">
+          <div class="crt film-plyr-wide">
+            <div class="crt plyr__video-embed" id="player">
+              <iframe src="https://www.youtube.com/embed/AOK-KWVUlWo" allowfullscreen allowautoplay allowtransparency
+                allow="autoplay"></iframe>
+            </div>
+          </div>
+          <div class="video-bar small">
+            <p>TRM002</p>
+            <p>COLBERT, GA</p>
+            <p>JUNE 28, 2020</p>
+          </div>
+        </div>
+        <div class="trm-description">
+          <p>
+            This installation calls for an awareness
+            of the media infrastructures that make possible our consumption and production of images. In an age of
+            “cloud”
+            storage, the user is removed from the physical imprints of their digital recordings. Recording 002 relies on
+            a
+            solar-powered, analog media system in order to bring forth the materiality of recorded sunset as stored data
+            and demystify the energy expenditure this process requires.
+          </p>
+        </div>
+        <div class="trm-video-embed trm-002-mobile">
+          <div class="crt film-plyr-wide">
+            <div class="crt plyr__video-embed" id="player">
+              <iframe src="https://www.youtube.com/embed/AOK-KWVUlWo" allowfullscreen allowautoplay allowtransparency
+                allow="autoplay"></iframe>
+            </div>
+          </div>
+          <div class="video-bar small">
+            <p>TRM002</p>
+            <p>COLBERT, GA</p>
+            <p>JUNE 28, 2020</p>
+          </div>
+        </div>
+        <div class="trm-schematic schematic-mobile">
+          <img src="../Images/trm_schematic.png">
+        </div>
+        <div class="trm-description">
+          <p>
+            With each recording occuring exactly one year apart, The Resurrection Machine considers both the daily
+            rotation of the earth as well as its annual revolution around the sun. On this larger timescale, the series
+            asks what it means to record the sunset in the human- mediated Anthropocene. How could our recording media
+            challenge the ways in which we experience and understand our relationship with the natural environment in
+            order to drive us towards climate action?
+          </p>
+        </div>
+        <div class="trm-schematic schematic-desktop">
+          <img src="../Images/trm_schematic.png">
+        </div>
+        <div class="trm-stack">
+          <img src="../Images/trm002_stack.png">
+        </div>
+        <div class="trm-video-embed">
+          <div class="crt film-plyr-wide">
+            <div class="crt plyr__video-embed" id="player">
+              <iframe src="https://www.youtube.com/embed/AOK-KWVUlWo" allowfullscreen allowautoplay allowtransparency
+                allow="autoplay"></iframe>
+            </div>
+          </div>
+          <div class="video-bar small">
+            <p>TRM003</p>
+            <p>BROOKLYN, NY</p>
+            <p>JUNE 28, 2021</p>
+          </div>
+          <div class="credits">
+            <ul>
+              <li>Project Credits:</li>
+              <br>
+              <li>Direction & Video: Scott Diekema</li>
+              <li>001 Audio: Vijay Rajkumar & Nicholas Byrne</li>
+              <li>002 Audio: Nicholas Byrne</li>
+              <li>003 Audio: Sam Lowe</li>
+              <li>002 Solar Consultation: Cameron Champion</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </section>
     <footer class="footer canvas">
       <p class="footer-text"><span class="slogan">Recycle Reality Responsibly</span>™
