meta tags and mobile tweaks trm

--- a/resurrection/index.html
+++ b/resurrection/index.html
@@ -8,22 +8,22 @@
 
   <!-- Primary Meta Tags -->
   <title>The Resurrection Machine</title>
-  <meta name="title" content="Information Arcade">
+  <meta name="title" content="The Resurrection Machine">
   <meta name="description" content="A meditation on the act of recording and its various techniques.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.informationarcade.com/">
-  <meta property="og:title" content="Information Arcade">
+  <meta property="og:url" content="https://www.informationarcade.com/resurrection">
+  <meta property="og:title" content="The Resurrection Machine">
   <meta property="og:description" content="A meditation on the act of recording and its various techniques.">
-  <meta property="og:image" content="../Images/IA_preview.jpg">
+  <meta property="og:image" content="../Images/trm_preview.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://www.informationarcade.com/">
-  <meta property="twitter:title" content="Information Arcade">
+  <meta property="twitter:url" content="https://www.informationarcade.com/resurrection">
+  <meta property="twitter:title" content="The Resurrection Machine">
   <meta property="twitter:description" content="A meditation on the act of recording and its various techniques.">
-  <meta property="twitter:image" content="../Images/IA_preview.jpg">
+  <meta property="twitter:image" content="../Images/trm_preview.jpg">
 
   <link rel="icon" type="image/x-icon" href="../favicon.ico">
   <link rel="stylesheet" href="../style.css">
