add coming soon screen

--- a/resurrection/index.html
+++ b/resurrection/index.html
@@ -54,15 +54,10 @@
     </nav>
     <section class="trm-content">
       <div class="full-video">
-        <div class="crt film-plyr">
-          <div class="crt plyr__video-embed" id="player">
-            <iframe src="https://www.youtube.com/embed/34yFcVwq7EM" allowfullscreen allowautoplay allowtransparency
-              allow="autoplay"></iframe>
-          </div>
-        </div>
-        <div class="video-bar">
+        <img class="coming-soon" src="../Images/comingsoon.png">
+        <div class="video-bar small">
           <p>TRM004</p>
-          <p>LONDON, UK</p>
+          <p>THE CLOUD</p>
           <p>JUNE 28, 2022</p>
         </div>
       </div>
