--- a/resurrection/index.html
+++ b/resurrection/index.html
@@ -95,7 +95,7 @@
         <div class="trm-video-embed trm-002-desktop">
           <div class="crt film-plyr-wide">
             <div class="crt plyr__video-embed" id="player">
-              <iframe src="https://www.youtube.com/embed/AOK-KWVUlWo" allowfullscreen allowautoplay allowtransparency
+              <iframe src="https://www.youtube.com/embed/m3pwaLDIFv8" allowfullscreen allowautoplay allowtransparency
                 allow="autoplay"></iframe>
             </div>
           </div>
@@ -119,7 +119,7 @@
         <div class="trm-video-embed trm-002-mobile">
           <div class="crt film-plyr-wide">
             <div class="crt plyr__video-embed" id="player">
-              <iframe src="https://www.youtube.com/embed/AOK-KWVUlWo" allowfullscreen allowautoplay allowtransparency
+              <iframe src="https://www.youtube.com/embed/m3pwaLDIFv8" allowfullscreen allowautoplay allowtransparency
                 allow="autoplay"></iframe>
             </div>
           </div>
