add livestream embed

--- a/resurrection/index.html
+++ b/resurrection/index.html
@@ -46,7 +46,7 @@
           <div class="corner-wrapper-round">
             <div class="plyr__video-embed" id="first_video">
               <iframe onclick="this.paused ? this.play() : this.pause();"
-                src="https://www.youtube.com/embed/fClzwDM9gZU" allowfullscreen allowautoplay allowtransparency
+                src="https://www.youtube.com/embed/edZ2Bz90t0k" allowfullscreen allowautoplay allowtransparency
                 allow="autoplay"></iframe>
             </div>
           </div>
