--- a/resurrection/index.html
+++ b/resurrection/index.html
@@ -45,9 +45,8 @@
         <div class="film-plyr-wide">
           <div class="corner-wrapper-round">
             <div class="plyr__video-embed" id="first_video">
-              <iframe onclick="this.paused ? this.play() : this.pause();"
-                src="https://www.youtube.com/embed/edZ2Bz90t0k" allowfullscreen allowautoplay allowtransparency
-                allow="autoplay"></iframe>
+              <iframe height="100%" width="100%" src="https://www.youtube.com/embed/1z8tXq07xk8" allowfullscreen
+                allowautoplay allowtransparency allow="autoplay"></iframe>
             </div>
           </div>
         </div>
