--- a/stream/index.html
+++ b/stream/index.html
@@ -141,7 +141,7 @@
         <div class="trm-video-embed">
           <div class="crt film-plyr-wide">
             <div class="crt plyr__video-embed" id="player">
-              <iframe src="https://www.youtube.com/embed/AOK-KWVUlWo" allowfullscreen allowautoplay allowtransparency
+              <iframe src="https://www.youtube.com/embed/ZpWxfPxqPRA" allowfullscreen allowautoplay allowtransparency
                 allow="autoplay"></iframe>
             </div>
           </div>
