--- a/cracked-wisdom/index.html
+++ b/cracked-wisdom/index.html
@@ -41,7 +41,7 @@
         </h1>
         <div class="bar"></div>
         <h2 class="subtitle">
-          Souvenirs from the World Wide Web
+          Artifacts from the World Wide Web
         </h2>
       </div>
     </nav>
