--- a/steve-says/index.html
+++ b/steve-says/index.html
@@ -42,7 +42,7 @@
         </h1>
         <div class="bar"></div>
         <h2 class="subtitle">
-          Souvenirs from the World Wide Web
+          Artifacts from the World Wide Web
         </h2>
       </div>
     </nav>
