--- a/stream/index.html
+++ b/stream/index.html
@@ -45,7 +45,7 @@
         <div class="film-plyr-wide">
           <div class="corner-wrapper-round">
             <div class="plyr__video-embed" id="first_video">
-              <iframe height="100%" width="100%" src="https://www.youtube.com/embed/HlkKRP0h0Xw" allowfullscreen
+              <iframe height="100%" width="100%" src="https://www.youtube.com/embed/K5SwC3OTFlk" allowfullscreen
                 allowautoplay allowtransparency allow="autoplay"></iframe>
             </div>
           </div>
