--- a/stream/index.html
+++ b/stream/index.html
@@ -152,13 +152,13 @@
           </div>
           <div class="credits">
             <ul>
-              <li>Project Credits:</li>
+              <li>Credits:</li>
               <br>
               <li>Direction & Video: Scott Diekema</li>
               <li>001 Audio: Vijay Rajkumar & Nicholas Byrne</li>
               <li>002 Audio: Nicholas Byrne</li>
-              <li>003 Audio: Sam Lowe</li>
               <li>002 Solar Consultation: Cameron Champion</li>
+              <li>003 Audio: Sam Lowe</li>
             </ul>
           </div>
         </div>
