add trm to homepage

--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
       </div>
     </nav>
     <section class="main-content">
+      <div class="project" id="trm">
+        <img class="project-icon" src="Images/vhs.png" alt="">
+        <div class="project-text">
+          <h3 class="project-title">
+            <a href="/resurrection/">The Resurrection Machine</a>
+          </h3>
+          <p class="project-description">
+            A meditation on the act of recording and its various techniques.
+          </p>
+        </div>
+      </div>
       <div class="project" id="steve">
         <img class="project-icon" src="Images/apple.png" alt="">
         <div class="project-text">
