--- a/resurrection/index.html
+++ b/resurrection/index.html
@@ -157,7 +157,7 @@
               <li>Direction & Video: Scott Diekema</li>
               <li>001 Audio: Vijay Rajkumar & Nicholas Byrne</li>
               <li>002 Audio: Nicholas Byrne</li>
-              <li>002 Solar Consultation: Cameron Champion</li>
+              <li>002 Solar: Cameron Champion</li>
               <li>003 Audio: Sam Lowe</li>
             </ul>
           </div>
